tests/rosetta/transpiler/OCaml/display-an-outline-as-a-nested-table.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/display-an-outline-as-a-nested-table.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Display-an-outline-as-a-nested-table" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/display-an-outline-as-a-nested-table.ml", line 131, characters 57-65:
131 |   n := (("name", Obj.repr ((Obj.obj (List.assoc ("name") List.nth (nodes) (0)) : int))) :: List.remove_assoc ("name") (Obj.magic (!n) : (string * Obj.t) list));
                                                               ^^^^^^^^
Error: This expression has type 'a list -> int -> 'a
       but an expression was expected of type
         (string * ('b -> 'c -> 'd)) list
